Fix test workflow: separate coverage and race detector
Go 1.24+ doesn't support -race with coverage profiling.
Split into two test runs: one for coverage, one for race detection.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,11 @@ jobs:
     - name: Download dependencies
       run: go mod download
 
-    - name: Run tests
-      run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+    - name: Run tests with coverage
+      run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+
+    - name: Run tests with race detector
+      run: go test -v -race ./...
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
